assets/css/style.css
/* ... */
.txt-m.mb-18.txt-black.slider-title {
  position: relative;
}

.cropper {
  font-family: Lexendexa Variablefont Wght, sans-serif;
  font-style: normal;
  position: relative;
  overflow: hidden;
}

.cropper.mt-12.mw-561 {
  max-width: 31.4em;
}

.cropper.mt-12.mw-460 {
  max-width: 27.5em;
}

.cropper.section-sub {
  max-width: 45.25em;
  margin-left: auto;
  margin-right: auto;
}

.cropper.mw-436 {
  max-width: 27.25em;
}

.container-l {
  width: 90%;
  max-width: 1280px;
}

.container-l.container-nav {
  align-items: center;
  display: flex;
}

.header {
  background-color: #101010;
  background-image: url("https://assets-global.website-files.com/660ad5c01065b65fdb4da00a/660ad5c01065b65fdb4da05a_bg-header-dot.svg"),
    url("https://assets-global.website-files.com/660ad5c01065b65fdb4da00a/660ad5c01065b65fdb4da059_bg-header-right.svg"),
    url("https://assets-global.website-files.com/660ad5c01065b65fdb4da00a/660ad5c01065b65fdb4da058_bg-header-left.svg");
  background-position: 50%, 100%, 0 0;
  background-repeat: no-repeat, no-repeat, no-repeat;
  background-size: auto 45.25em, auto 28em, auto 17.875em;
  padding-top: 13.5em;
  padding-bottom: 11.25em;
}

.dropdown-toggle {
  padding: 0;
}

.dropdown-toggle.nav-link {
  padding-right: 1.5em;
  overflow: hidden;
}

.icon {
  margin-right: 0;
}

.dropdown-content-wrapper {
  color: #fff;
  background-color: #000;
}

.dropdown-content-wrapper.w--open {
  grid-row-gap: 1px;
  background-color: rgba(0, 0, 0, 0);
  flex-direction: column;
  align-items: flex-start;
  margin-top: 1em;
  display: flex;
}

.row {
  display: flex;
}

.row.dr-ver {
  flex-direction: column;
}

.row.al-center {
  align-items: center;
}

.row.card-row {
  grid-column-gap: 1em;
}

.row.card-row.card-mini {
  grid-column-gap: 5.375em;
  margin-top: 3.75em;
}

.row.post-row {
  grid-column-gap: 6.25em;
  margin-top: 9em;
}

.row.post-row.first {
  margin-top: 0;
}

.row.btn-row {
  grid-column-gap: 1.75em;
  align-items: center;
}

.store-wrapper {
  grid-column-gap: 1.5em;
  display: flex;
}

.store-wrapper.store-btn-2 {
  grid-column-gap: 1em;
  margin-top: 2em;
}

.store-btn {
  height: 3.375em;
}

.store-btn.store-btn-2 {
  height: 3.125em;
}

.store-img {
  height: 100%;
}

.mt-60 {
  margin-top: 3.25em;
}

.mt-40 {
  margin-top: 2.5em;
}

.ratting-wrapper {
  grid-column-gap: 1.125em;
  align-items: center;
  display: flex;
}

.txt-green {
  color: #72e485;
}

.phone {
  height: 34.5em;
}

.header-img-wrapper {
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.amazon-left {
  width: 20em;
  height: 3.875em;
  position: absolute;
  top: 20.4em;
  left: -5.1em;
}

.mcd-right {
  width: 20em;
  height: 3.875em;
  position: absolute;
  bottom: 3em;
  right: -4.75em;
}

.amazon-img,
.mcd-img {
  box-shadow: 0 40px 60px rgba(51, 51, 51, 0.2);
}

.overflow {
  overflow: hidden;
}

.footer-link-wrapper {
  grid-column-gap: 3.25em;
  justify-content: space-between;
  display: flex;
  overflow: hidden;
}

.footer-link-list {
  color: #eeeaea;
  padding-left: 0;
  font-family: Lexendexa Variablefont Wght, sans-serif;
  font-style: normal;
}

.copyright {
  color: #eeeaea;
  text-transform: uppercase;
  font-family: Lexendexa Variablefont Wght, sans-serif;
  font-size: 1.125em;
  font-style: normal;
}

.footer {
  color: #fff;
  text-align: center;
  background-color: #101010;
  align-items: flex-start;
  padding-top: 4.375em;
  font-style: italic;
  line-height: 1.5em;
}

.footer-image {
  object-position: 0% 50%;
  height: 1.625em;
}

.footer-link {
  color: #eeeaea;
  margin-bottom: 0.5em;
  font-size: 1.125em;
  font-style: normal;
  font-weight: 400;
  line-height: 1.5em;
  text-decoration: none;
  display: block;
}

.footer-link:hover {
  color: #bfbfbf;
  text-decoration: underline;
}

.footer-flex-container {
  text-align: left;
  justify-content: space-between;
  align-items: stretch;
  margin-bottom: 3.25em;
  display: flex;
}

.footer-link-box.mw-184 {
  width: 11.5em;
}

.footer-logo-link {
  flex: 0 auto;
  margin-bottom: 2.5em;
  display: inline-block;
}

.sco-med-wrapper {
  grid-column-gap: 1.5em;
  justify-content: flex-start;
  display: flex;
}

.soc-icon {
  width: 1.5em;
  height: 1.5em;
}

.copyright-wrapper {
  border-top: 1px solid rgba(242, 242, 242, 0.2);
  padding-top: 1.25em;
  padding-bottom: 1.25em;
  overflow: hidden;
}

.txt-s {
  color: #eeeaea;
  font-family: Lexendexa Variablefont Wght, sans-serif;
  font-size: 1.125em;
  font-style: normal;
  line-height: 1.5em;
}

.section {
  padding-top: 5.625em;
  padding-bottom: 5.625em;
}

.section.bg-green {
  background-image: url("https://assets-global.website-files.com/660ad5c01065b65fdb4da00a/660ad5c01065b65fdb4da071_line-bg.svg");
  background-position: 0 0;
  background-repeat: no-repeat;
  background-size: cover;
}

.section.bg-green.txt-center {
  background-color: #eeeaea;
}

.section.bg-grey {
  background-image: url("https://assets-global.website-files.com/660ad5c01065b65fdb4da00a/660ad5c01065b65fdb4da071_line-bg.svg");
  background-position: 50%;
  background-size: cover;
}

.section.py-120 {
  padding-top: 7.5em;
  padding-bottom: 7.5em;
}

.bg-green {
  background-color: #72e485;
}

.txt-xs {
  color: #121212;
  font-family: Lexendexa Variablefont Wght, sans-serif;
  font-size: 1em;
  font-style: normal;
  font-weight: 400;
  line-height: 1.6em;
}

.txt-center {
  text-align: center;
}

.txt-black {
  color: #101010;
}

.mt-12 {
  margin-top: 0.75em;
}

.txt-xl {
  font-size: 2.5em;
  line-height: 1.4em;
}

.bg-grey {
  background-color: #f8f8f8;
}

.section-header {
  text-align: center;
}

.mt-20 {
  margin-top: 1.25em;
}

.section-content {
  margin-top: 5em;
  overflow: hidden;
}

.card {
  border-radius: 1em;
  padding: 1.875em 1.875em 2.5em;
}

.card.mini {
  padding: 0;
}

.txt-sm {
  color: #121212;
  text-align: center;
  font-family: Lexendexa Variablefont Wght, sans-serif;
  font-size: 1.25em;
  font-style: normal;
  line-height: 1.5em;
}
/* ... */

